--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -10,12 +10,18 @@
     align-items: center;
 }
 
-.headline {
+.headline:link,
+.headline:visited,
+.headline:hover,
+.headline:focus,
+.headline:active  {
     padding: 20px;
     text-align: center;
     color: white;
     background-color: rgba(10, 34, 73, 0.9); 
     width: 100%;
     font-family: 'Love Ya Like A Sister', cursive;
+    font-size: 2em;
     letter-spacing: 2px;
+    text-decoration: none;
 }
